# api/northbound.go
@@ -11,6 +11,7 @@ package api
 import (
 	"fmt"
 	"net/http"
+	"strings"
 
 	"github.com/Southclaws/fault/ftag"
 	"github.com/go-openapi/loads"
@@ -21,10 +22,12 @@ import (
 	"github.com/siemens/wfx/generated/northbound/restapi/operations/northbound"
 	"github.com/siemens/wfx/internal/handler/job"
 	"github.com/siemens/wfx/internal/handler/job/definition"
+	"github.com/siemens/wfx/internal/handler/job/events"
 	"github.com/siemens/wfx/internal/handler/job/status"
 	"github.com/siemens/wfx/internal/handler/job/tags"
 	"github.com/siemens/wfx/internal/handler/workflow"
 	"github.com/siemens/wfx/middleware/logging"
+	"github.com/siemens/wfx/middleware/responder/sse"
 	"github.com/siemens/wfx/persistence"
 )
 
@@ -266,5 +269,36 @@ func NewNorthboundAPI(storage persistence.Storage) *operations.WorkflowExecutorA
 			return northbound.NewDeleteJobsIDTagsOK().WithPayload(tags)
 		})
 
+	serverAPI.NorthboundGetJobsEventsHandler = northbound.GetJobsEventsHandlerFunc(
+		func(params northbound.GetJobsEventsParams) middleware.Responder {
+			ctx := params.HTTPRequest.Context()
+			filter := parseFilterParamsNorth(params)
+			var tags []string
+			if s := params.Tags; s != nil {
+				tags = strings.Split(*s, ",")
+			}
+			eventChan, err := events.AddSubscriber(ctx, filter, tags)
+			if err != nil {
+				return northbound.NewGetJobsEventsDefault(http.StatusInternalServerError)
+			}
+			return sse.Responder(ctx, eventChan)
+		})
+
 	return serverAPI
+}
+
+func parseFilterParamsNorth(params northbound.GetJobsEventsParams) events.FilterParams {
+	// same code as parseFilterParamsSouth but params is from a different package;
+	// this isn't pretty (DRY) but we have a conceptually clear distinction
+	var filter events.FilterParams
+	if ids := params.JobIds; ids != nil {
+		filter.JobIDs = strings.Split(*ids, ",")
+	}
+	if ids := params.ClientIds; ids != nil {
+		filter.ClientIDs = strings.Split(*ids, ",")
+	}
+	if wfs := params.Workflows; wfs != nil {
+		filter.Workflows = strings.Split(*wfs, ",")
+	}
+	return filter
 }
